// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing react components snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
      }
    }
  >
    AccountScreen
  </Text>
</View>
`;

exports[`Testing react components snapshot 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
      }
    }
  >
    SearchScreen
  </Text>
</View>
`;
